adding fan in web

--- a/data/index.html
+++ b/data/index.html
@@ -61,7 +61,11 @@
             </div>
             <div class="measurement">
                 <div class="measurement-title">Temperature</div>
-                <div class="measurement-value" id="temperature">25.0 °C</div>
+                <div class="measurement-value" id="temperature">0.0 °C</div>
+            </div>
+            <div class="measurement">
+                <div class="measurement-title">Fan Speed</div>
+                <div class="measurement-value" id="fan-speed">0 %</div>
             </div>
         </div>
         
