adding timer functionality

--- a/data/index.html
+++ b/data/index.html
@@ -46,7 +46,7 @@
                 <div id="fan-icon">𖣘</div>
                 <div id="fan-speed">0 %</div>
             </h2>
-            <h2 class="tag" style="z-index: -2;">00:10:00</h2>
+            <h2 class="tag" id="uptime-timer" style="z-index: -2;">00:00:00</h2>
         </div>
         <div class="container" id="output-container">
             <div class="measurements">
