two way sync bug fix + code cleanup

--- a/data/index.html
+++ b/data/index.html
@@ -14,7 +14,7 @@
                 <button class="mode-btn" data-mode="CC">CC</button>
                 <button class="mode-btn" data-mode="CV">CV</button>
                 <button class="mode-btn" data-mode="CR">CR</button>
-                <button class="mode-btn" data-mode="CP">CW</button>
+                <button class="mode-btn" data-mode="CW">CW</button>
             </div>
             
             <div id="value-display" class="hidden">
